--- a/Areas/Contract/Views/Contract/Index.cshtml
+++ b/Areas/Contract/Views/Contract/Index.cshtml
@@ -1,116 +1,82 @@
-﻿<div class="container-fluid">
-    <div class="col-12 mb-30">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="card text-center">
-                    <div class="card-body card-modifed">
-                        <div class="d-flex justify-content-between align-items-center flex-wrap">
-                            <div class="status-info mb-2">
-                                <select id="room-status" class="form-select input-height"
-                                    aria-label="Chọn trạng thái phòng">
-                                    <option value="all">Room status</option>
-                                    <option value="available">Available </option>
-                                    <option value="abouttoexpire">About to expire</option>
-                                    <option value="rented">Rented</option>
-                                </select>
-                                <!-- Room Number Field -->
-                                <input class="input-height input-room" type="text" id="room-number"
-                                    placeholder="Enter number room" aria-label="Nhập số phòng">
-                                <!-- Search Button -->
-                                <a href="#" class="btn btn-primary btn-custom me-2">
-                                    <i class="fas fa-search"></i>
-                                    Search
-                                </a>
-                            </div>
-                            <div class="action-buttons mb-2">
-                                <a asp-controller="Room" asp-action="CreateHome" class="btn btn-primary me-2">
-                                    <i class="fas fa-plus"></i>
-                                    Add home
-                                </a>
-                                @* <a href="#" class="btn btn-info me-2">
+﻿@{
+    var hasRentalProperty = ViewBag.HasRentalProperties;
+}
+@if (hasRentalProperty)
+{
+    <div class="container-fluid">
+        <div class="col-12 mb-30">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="card text-center">
+                        <div class="card-body card-modifed">
+                            <div class="d-flex justify-content-between align-items-center flex-wrap">
+                                <div class="status-info mb-2">
+                                    <select id="room-status" class="form-select input-height"
+                                        aria-label="Chọn trạng thái phòng">
+                                        <option value="all">All Contract</option>
+                                        <option value="pending">Pending </option>
+                                        <option value="active">Active </option>
+                                        <option value="completed">Completed </option>
+                                    </select>
+                                    <!-- Room Number Field -->
+                                    <input class="input-height input-room" type="text" id="room-number"
+                                        placeholder="Enter contract name" aria-label="Nhập số phòng">
+                                    <!-- Search Button -->
+                                    <a href="#" class="btn btn-primary btn-custom me-2">
+                                        <i class="fas fa-search"></i>
+                                        Search
+                                    </a>
+                                </div>
+                                <div class="action-buttons mb-2">
+                                    @* <a asp-controller="Room" asp-action="CreateHome" class="btn btn-primary me-2">
+                                <i class="fas fa-plus"></i>
+                                Add home
+                                </a> *@
+                                    @* <a href="#" class="btn btn-info me-2">
                                 <i class="fas fa-edit"></i>
                                 Enter room from excel
                                 </a> *@
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="col-12 mb-30">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="card ">
-                    <div class="card-header">
-                        <ul class="nav nav-tabs card-header-tabs" id="tab-list">
-                            @* Generate code *@
-                        </ul>
-                    </div>
-                    <div class="card-body">
-                        <div class="d-flex justify-content-between align-items-center flex-wrap mb-3">
-                            <div class="status-info mb-2" id="status-info">
+        <div class="col-12 mb-30">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="card ">
+                        <div class="card-header">
+                            <ul class="nav nav-tabs card-header-tabs" id="tab-list">
                                 @* Generate code *@
-                            </div>
-                            <div class="action-buttons mb-2" id="btn-action">
-                                @* Generate code *@
+                            </ul>
+                        </div>
+                        <div class="card-body">
+                            <div class="d-flex justify-content-between align-items-center flex-wrap mb-3">
+                                <div class="status-info mb-2" id="status-info">
+                                    @* Generate code *@
+                                </div>
+                                <div class="action-buttons mb-2" id="btn-action">
+                                    @* Generate code *@
 
+                                </div>
                             </div>
                             <div class="table-responsive">
-                                <table class="table table-striped table-bordered zero-configuration" <thead>
+                                <table class="table table-striped table-bordered zero-configuration text-center"
+                                    id="contract-list">
                                     <thead>
                                         <tr>
-                                            <th>Contract ID</th>
-                                            <th>Customer Name</th>
-                                            <th>Sign Date</th>
+                                            <th>No.</th>
+                                            <th>Tenant Name</th>
+                                            <th>Room Number</th>
+                                            <th>Starting Date</th>
                                             <th>Expiration Date</th>
-                                            <th>Value (VND)</th>
-                                            <th>Status</th>
                                             <th>Actions</th>
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr>
-                                            <td>CT001</td>
-                                            <td>John Doe</td>
-                                            <td>01/01/2023</td>
-                                            <td>01/01/2024</td>
-                                            <td>100,000,000</td>
-                                            <td>Active</td>
-                                            <td>
-                                                <span>
-                                                    <a asp-controller="Tenant" asp-action="EditTenant" asp-route-id="1"
-                                                        data-toggle="tooltip" data-placement="top" title="Edit">
-                                                        <i class="fa fa-pencil color-muted m-r-5"></i>
-                                                    </a>
-                                                    <!-- Link trigger modal for closing -->
-                                                    <a href="#basicModal" data-toggle="modal" title="Close">
-                                                        <i class="fa fa-close color-danger"></i>
-                                                    </a>
-                                                </span>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>CT002</td>
-                                            <td>Jane Smith</td>
-                                            <td>15/02/2023</td>
-                                            <td>15/02/2024</td>
-                                            <td>200,000,000</td>
-                                            <td>Paid</td>
-                                            <td>
-                                                <span>
-                                                    <a asp-controller="Tenant" asp-action="EditTenant" asp-route-id="2"
-                                                        data-toggle="tooltip" data-placement="top" title="Edit">
-                                                        <i class="fa fa-pencil color-muted m-r-5"></i>
-                                                    </a>
-                                                    <!-- Link trigger modal for closing -->
-                                                    <a href="#basicModal" data-toggle="modal" title="Close">
-                                                        <i class="fa fa-close color-danger"></i>
-                                                    </a>
-                                                </span>
-                                            </td>
-                                        </tr>
-                                        <!-- Add more rows as needed -->
+                                        @* Generate code *@
                                     </tbody>
                                 </table>
                             </div>
@@ -121,12 +87,44 @@
             </div>
         </div>
     </div>
-</div>
+}
+else
+{
+    <div class="col-12 mb-30">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="card text-center">
+                    <div class="card-body card-modifed">
+                        @* <div class="d-flex justify-content-end align-items-center flex-wrap">
+                    <div class="action-buttons mb-2">
+                    <a asp-controller="Room" asp-action="CreateHome" class="btn btn-primary me-2">
+                    <i class="fas fa-plus"></i>
+                    Add home
+                    </a>
+                    </div>
+                    </div> *@
+                    </div>
+                    @* Process no availble data *@
+                </div>
+            </div>
+        </div>
+    </div>
+}
 
 @* Link CSS*@
 @section AdditionalLinkCSS {
     <link href="../css/site.css" rel="stylesheet">
     <link href="../plugins/tables/css/datatable/dataTables.bootstrap4.min.css" rel="stylesheet">
+    <style>
+        #contract-list_wrapper {
+            padding: 0px !important;
+        }
+
+        /* Show the first row if it exists */
+        div.table-responsive>div.dataTables_wrapper>div.row:first-child {
+            display: none !important;
+        }
+    </style>
 }
 
 @* Link Javascript*@
