--- a/Areas/InvoiceAndPayment/Views/Invoice/Index.cshtml
+++ b/Areas/InvoiceAndPayment/Views/Invoice/Index.cshtml
@@ -1,63 +1,70 @@
-<div class="container-fluid">
-    <div class="col-12 mb-30">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="card text-center">
-                    <div class="card-body card-modifed">
-                        <div class="d-flex justify-content-between align-items-center flex-wrap">
-                            <div class="status-info mb-2">
-                                <select id="room-status" class="form-select input-height"
-                                    aria-label="Chọn trạng thái phòng">
-                                    <option value="all">Room status</option>
-                                    <option value="available">Available </option>
-                                    <option value="abouttoexpire">About to expire</option>
-                                    <option value="rented">Rented</option>
-                                </select>
-                                <!-- Room Number Field -->
-                                <input class="input-height input-room" type="text" id="room-number"
-                                    placeholder="Enter number room" aria-label="Nhập số phòng">
-                                <!-- Search Button -->
-                                <a href="#" class="btn btn-primary btn-custom me-2">
-                                    <i class="fas fa-search"></i>
-                                    Search
-                                </a>
-                            </div>
-                            <div class="action-buttons mb-2">
-                                <a asp-controller="Room" asp-action="CreateHome" class="btn btn-primary me-2">
-                                    <i class="fas fa-plus"></i>
-                                    Add home
-                                </a>
-                                @* <a href="#" class="btn btn-info me-2">
+@{
+    var hasRentalProperty = ViewBag.HasRentalProperties;
+}
+@if (hasRentalProperty)
+{
+    <div class="container-fluid">
+        <div class="col-12 mb-30">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="card text-center">
+                        <div class="card-body card-modifed">
+                            <div class="d-flex justify-content-between align-items-center flex-wrap">
+                                <div class="status-info mb-2">
+                                    <select id="room-status" class="form-select input-height"
+                                        aria-label="Chọn trạng thái phòng">
+                                        <option value="all">All Invocies</option>
+                                        <option value="pending">Pending </option>
+                                        <option value="unpaid">Unpaid </option>
+                                        <option value="paid">Paid </option>
+                                        <option value="overdue">Overdue</option>
+                                    </select>
+                                    <!-- Room Number Field -->
+                                    <input class="input-height input-room" type="text" id="room-number"
+                                        placeholder="Enter invocies number" aria-label="Nhập số phòng">
+                                    <!-- Search Button -->
+                                    <a href="#" class="btn btn-primary btn-custom me-2">
+                                        <i class="fas fa-search"></i>
+                                        Search
+                                    </a>
+                                </div>
+                                <div class="action-buttons mb-2">
+                                    @* <a asp-controller="Room" asp-action="CreateHome" class="btn btn-primary me-2">
+                                <i class="fas fa-plus"></i>
+                                Add home
+                                </a> *@
+                                    @* <a href="#" class="btn btn-info me-2">
                                 <i class="fas fa-edit"></i>
                                 Enter room from excel
                                 </a> *@
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="col-12 mb-30">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="card ">
-                    <div class="card-header">
-                        <ul class="nav nav-tabs card-header-tabs" id="tab-list">
-                            @* Generate code *@
-                        </ul>
-                    </div>
-                    <div class="card-body">
-                        <div class="d-flex justify-content-between align-items-center flex-wrap mb-3">
-                            <div class="status-info mb-2" id="status-info">
+        <div class="col-12 mb-30">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="card ">
+                        <div class="card-header">
+                            <ul class="nav nav-tabs card-header-tabs" id="tab-list">
                                 @* Generate code *@
-                            </div>
-                            <div class="action-buttons mb-2" id="btn-action">
-                                @* Generate code *@
-
+                            </ul>
+                        </div>
+                        <div class="card-body">
+                            <div class="d-flex justify-content-between align-items-center flex-wrap mb-3">
+                                <div class="status-info mb-2" id="status-info">
+                                    @* Generate code *@
+                                </div>
+                                <div class="action-buttons mb-2" id="btn-action">
+                                    @* Generate code *@
+                                </div>
                             </div>
                             <div class="table-responsive">
-                                <table class="table table-striped table-bordered zero-configuration" id=invoice-list>
+                                <table class="table table-striped table-bordered zero-configuration text-center"
+                                    id="invoice-list">
                                     <thead>
                                         <tr>
                                             <th>No.</th>
@@ -73,19 +80,52 @@
                                     </tbody>
                                 </table>
                             </div>
+                            <hr />
                         </div>
-                        <hr />
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+}
+else
+{
+    <div class="col-12 mb-30">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="card text-center">
+                    <div class="card-body card-modifed">
+                        @* <div class="d-flex justify-content-end align-items-center flex-wrap">
+                    <div class="action-buttons mb-2">
+                    <a asp-controller="Room" asp-action="CreateHome" class="btn btn-primary me-2">
+                    <i class="fas fa-plus"></i>
+                    Add home
+                    </a>
+                    </div>
+                    </div> *@
+                    </div>
+                    @* Process no availble data *@
+                </div>
+            </div>
+        </div>
+    </div>
+}
+
 
 @* Link CSS*@
 @section AdditionalLinkCSS {
     <link href="../css/site.css" rel="stylesheet">
     <link href="../plugins/tables/css/datatable/dataTables.bootstrap4.min.css" rel="stylesheet">
+    <style>
+        #invoice-list_wrapper {
+            padding: 0px !important;
+        }
+
+        /* Show the first row if it exists */
+        div.table-responsive>div.dataTables_wrapper>div.row:first-child {
+            display: none !important;
+        }
+    </style>
 }
 
 @* Link Javascript*@
