--- a/Areas/MaintenanceAndIncident/Views/MaintenanceAndIncident/Index.cshtml
+++ b/Areas/MaintenanceAndIncident/Views/MaintenanceAndIncident/Index.cshtml
@@ -1,131 +1,159 @@
-﻿<div class="container-fluid">
+﻿@{
+    var hasRentalProperty = ViewBag.HasRentalProperties;
+}
+@if (hasRentalProperty)
+{
+    <div class="container-fluid">
+        <div class="col-12 mb-30">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="card text-center">
+                        <div class="card-body card-modifed">
+                            <div class="d-flex justify-content-between align-items-center flex-wrap">
+                                <div class="status-info mb-2">
+                                    <select id="room-status" class="form-select input-height"
+                                        aria-label="Chọn trạng thái phòng">
+                                        <option value="all">Room status</option>
+                                        <option value="available">Available </option>
+                                        <option value="abouttoexpire">About to expire</option>
+                                        <option value="rented">Rented</option>
+                                    </select>
+                                    <!-- Room Number Field -->
+                                    <input class="input-height input-room" type="text" id="room-number"
+                                        placeholder="Enter number room" aria-label="Nhập số phòng">
+                                    <!-- Search Button -->
+                                    <a href="#" class="btn btn-primary btn-custom me-2">
+                                        <i class="fas fa-search"></i>
+                                        Search
+                                    </a>
+                                </div>
+                                <div class="action-buttons mb-2">
+                                    <a asp-controller="Room" asp-action="CreateHome" class="btn btn-primary me-2">
+                                        <i class="fas fa-plus"></i>
+                                        Add home
+                                    </a>
+                                    @* <a href="#" class="btn btn-info me-2">
+                                <i class="fas fa-edit"></i>
+                                Enter room from excel
+                                </a> *@
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 mb-30">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="card ">
+                        <div class="card-header">
+                            <ul class="nav nav-tabs card-header-tabs">
+                                <li class="nav-item">
+                                    <a class="nav-link active" href="#">83 - Lê Văn Lương</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">87 - Hoàng Diệu</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">139 - Trường Trinh</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">231 - Nguyễn Thị Thập</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="card-body">
+                            <div class="d-flex justify-content-between align-items-center flex-wrap mb-3">
+                                <div class="status-info mb-2">
+                                    <span>Available 4</span> | <span>About to expire 2</span> | <span>Rented 7</span>
+                                </div>
+                                <div class="action-buttons mb-2">
+                                    <a asp-controller="Room" asp-action="CreateRoom" class="btn btn-primary me-2 ">
+                                        <i class="fas fa-plus"></i> Add room
+                                    </a>
+                                    <a asp-controller="Room" asp-action="EditHome" class="btn btn-info me-2 ">
+                                        <i class="fas fa-edit"></i> Update home
+                                    </a>
+                                    @* <a href="#" class="btn btn-danger ">
+                                <i class="fas fa-trash"></i> Delete home
+                                </a> *@
+                                </div>
+                                <div class="table-responsive">
+                                    <table class="table table-striped table-bordered zero-configuration">
+                                        <thead>
+                                            <tr>
+                                                <th>Incident ID</th>
+                                                <th>Asset ID</th>
+                                                <th>Description</th>
+                                                <th>Incident Date</th>
+                                                <th>Resolution Date</th>
+                                                <th>Status</th>
+                                                <th>Assigned To</th>
+                                                <th>Maintenance Cost (VND)</th> <!-- Cột chi phí bảo trì -->
+                                                <th>Asset Condition</th> <!-- Cột tình trạng thiết bị -->
+                                                <th>Actions</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td>INC001</td>
+                                                <td>A001</td>
+                                                <td>Power failure in the computer.</td>
+                                                <td>01/02/2024</td>
+                                                <td>01/02/2024</td>
+                                                <td>Resolved</td>
+                                                <td>John Doe</td>
+                                                <td>500,000</td> <!-- Chi phí bảo trì -->
+                                                <td>Broken</td> <!-- Tình trạng thiết bị -->
+                                                <td>
+                                                    <span>
+                                                        <a asp-controller="Incident" asp-action="EditIncident"
+                                                            asp-route-id="1" data-toggle="tooltip" data-placement="top"
+                                                            title="Edit">
+                                                            <i class="fa fa-pencil color-muted m-r-5"></i>
+                                                        </a>
+                                                        <a href="#basicModal" data-toggle="modal" title="Remove">
+                                                            <i class="fa fa-close color-danger"></i>
+                                                        </a>
+                                                    </span>
+                                                </td>
+                                            </tr>
+                                            <!-- Add more rows as needed -->
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                            <hr />
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+}
+else
+{
     <div class="col-12 mb-30">
         <div class="row">
             <div class="col-lg-12">
                 <div class="card text-center">
                     <div class="card-body card-modifed">
-                        <div class="d-flex justify-content-between align-items-center flex-wrap">
-                            <div class="status-info mb-2">
-                                <select id="room-status" class="form-select input-height"
-                                    aria-label="Chọn trạng thái phòng">
-                                    <option value="all">Room status</option>
-                                    <option value="available">Available </option>
-                                    <option value="abouttoexpire">About to expire</option>
-                                    <option value="rented">Rented</option>
-                                </select>
-                                <!-- Room Number Field -->
-                                <input class="input-height input-room" type="text" id="room-number"
-                                    placeholder="Enter number room" aria-label="Nhập số phòng">
-                                <!-- Search Button -->
-                                <a href="#" class="btn btn-primary btn-custom me-2">
-                                    <i class="fas fa-search"></i>
-                                    Search
-                                </a>
-                            </div>
-                            <div class="action-buttons mb-2">
-                                <a asp-controller="Room" asp-action="CreateHome" class="btn btn-primary me-2">
-                                    <i class="fas fa-plus"></i>
-                                    Add home
-                                </a>
-                                @* <a href="#" class="btn btn-info me-2">
-                                <i class="fas fa-edit"></i>
-                                Enter room from excel
-                                </a> *@
-                            </div>
-                        </div>
+                        @* <div class="d-flex justify-content-end align-items-center flex-wrap">
+                    <div class="action-buttons mb-2">
+                    <a asp-controller="Room" asp-action="CreateHome" class="btn btn-primary me-2">
+                    <i class="fas fa-plus"></i>
+                    Add home
+                    </a>
                     </div>
+                    </div> *@
+                    </div>
+                    @* Process no availble data *@
                 </div>
             </div>
         </div>
     </div>
-    <div class="col-12 mb-30">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="card ">
-                    <div class="card-header">
-                        <ul class="nav nav-tabs card-header-tabs">
-                            <li class="nav-item">
-                                <a class="nav-link active" href="#">83 - Lê Văn Lương</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">87 - Hoàng Diệu</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">139 - Trường Trinh</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">231 - Nguyễn Thị Thập</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="card-body">
-                        <div class="d-flex justify-content-between align-items-center flex-wrap mb-3">
-                            <div class="status-info mb-2">
-                                <span>Available 4</span> | <span>About to expire 2</span> | <span>Rented 7</span>
-                            </div>
-                            <div class="action-buttons mb-2">
-                                <a asp-controller="Room" asp-action="CreateRoom" class="btn btn-primary me-2 ">
-                                    <i class="fas fa-plus"></i> Add room
-                                </a>
-                                <a asp-controller="Room" asp-action="EditHome" class="btn btn-info me-2 ">
-                                    <i class="fas fa-edit"></i> Update home
-                                </a>
-                                @* <a href="#" class="btn btn-danger ">
-                                <i class="fas fa-trash"></i> Delete home
-                                </a> *@
-                            </div>
-                            <div class="table-responsive">
-                                <table class="table table-striped table-bordered zero-configuration" <thead>
-                                    <thead>
-                                        <tr>
-                                            <th>Incident ID</th>
-                                            <th>Asset ID</th>
-                                            <th>Description</th>
-                                            <th>Incident Date</th>
-                                            <th>Resolution Date</th>
-                                            <th>Status</th>
-                                            <th>Assigned To</th>
-                                            <th>Maintenance Cost (VND)</th> <!-- Cột chi phí bảo trì -->
-                                            <th>Asset Condition</th> <!-- Cột tình trạng thiết bị -->
-                                            <th>Actions</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td>INC001</td>
-                                            <td>A001</td>
-                                            <td>Power failure in the computer.</td>
-                                            <td>01/02/2024</td>
-                                            <td>01/02/2024</td>
-                                            <td>Resolved</td>
-                                            <td>John Doe</td>
-                                            <td>500,000</td> <!-- Chi phí bảo trì -->
-                                            <td>Broken</td> <!-- Tình trạng thiết bị -->
-                                            <td>
-                                                <span>
-                                                    <a asp-controller="Incident" asp-action="EditIncident"
-                                                        asp-route-id="1" data-toggle="tooltip" data-placement="top"
-                                                        title="Edit">
-                                                        <i class="fa fa-pencil color-muted m-r-5"></i>
-                                                    </a>
-                                                    <a href="#basicModal" data-toggle="modal" title="Remove">
-                                                        <i class="fa fa-close color-danger"></i>
-                                                    </a>
-                                                </span>
-                                            </td>
-                                        </tr>
-                                        <!-- Add more rows as needed -->
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                        <hr />
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+}
 
 @* Link CSS*@
 @section AdditionalLinkCSS {
