--- a/Areas/Tenant/Views/Tenant/Index.cshtml
+++ b/Areas/Tenant/Views/Tenant/Index.cshtml
@@ -1,76 +1,64 @@
-﻿<div class="container-fluid">
-    <div class="col-12 mb-30">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="card text-center">
-                    <div class="card-body card-modifed">
-                        <div class="d-flex justify-content-between align-items-center flex-wrap">
-                            <div class="status-info mb-2">
-                                <select id="room-status" class="form-select input-height"
-                                    aria-label="Chọn trạng thái phòng">
-                                    <option value="all">Room status</option>
-                                    <option value="available">Available </option>
-                                    <option value="abouttoexpire">About to expire</option>
-                                    <option value="rented">Rented</option>
-                                </select>
-                                <!-- Room Number Field -->
-                                <input class="input-height input-room" type="text" id="room-number"
-                                    placeholder="Enter number room" aria-label="Nhập số phòng">
-                                <!-- Search Button -->
-                                <a href="#" class="btn btn-primary btn-custom me-2">
-                                    <i class="fas fa-search"></i>
-                                    Search
-                                </a>
-                            </div>
-                            <div class="action-buttons mb-2">
-                                <a asp-controller="Room" asp-action="CreateHome" class="btn btn-primary me-2">
-                                    <i class="fas fa-plus"></i>
-                                    Add home
-                                </a>
-                                @* <a href="#" class="btn btn-info me-2">
+﻿@{
+    var hasRentalProperty = ViewBag.HasRentalProperties;
+}
+@if (hasRentalProperty)
+{
+    <div class="container-fluid">
+        <div class="col-12 mb-30">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="card text-center">
+                        <div class="card-body card-modifed">
+                            <div class="d-flex justify-content-between align-items-center flex-wrap">
+                                <div class="status-info mb-2">
+                                    <select id="room-status" class="form-select input-height"
+                                        aria-label="Choose status tenant">
+                                        <option value="all">All tenant</option>
+                                        <option value="currenttenant">Current tenant</option>
+                                        <option value="previoustenant">Previous tenant</option>
+                                    </select>
+                                    <!-- Room Number Field -->
+                                    <input class="input-height input-room" type="text" id="room-number"
+                                        placeholder="Enter tenant information" aria-label="Nhập số phòng">
+                                    <!-- Search Button -->
+                                    <a href="#" class="btn btn-primary btn-custom me-2">
+                                        <i class="fas fa-search"></i>
+                                        Search
+                                    </a>
+                                </div>
+                                <div class="action-buttons mb-2">
+                                    @* <a asp-controller="Room" asp-action="CreateHome" class="btn btn-primary me-2">
+                                <i class="fas fa-plus"></i>
+                                Add home
+                                </a> *@
+                                    @* <a href="#" class="btn btn-info me-2">
                                 <i class="fas fa-edit"></i>
                                 Enter room from excel
                                 </a> *@
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="col-12 mb-30">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="card ">
-                    <div class="card-header">
-                        <ul class="nav nav-tabs card-header-tabs" id="tab-list">
-
-                            @* <li class="nav-item">
-                            <a class="nav-link active" href="#">83 - Lê Văn Lương</a>
-                            </li>
-                            <li class="nav-item">
-                            <a class="nav-link" href="#">87 - Hoàng Diệu</a>
-                            </li>
-                            <li class="nav-item">
-                            <a class="nav-link" href="#">139 - Trường Trinh</a>
-                            </li>
-                            <li class="nav-item">
-                            <a class="nav-link" href="#">231 - Nguyễn Thị Thập</a>
-                            </li> *@
-                        </ul>
-                    </div>
-                    <div class="card-body">
-                        <div class="d-flex justify-content-between align-items-center flex-wrap mb-3">
-                            <div class="status-info mb-2" id="status-info">
-                                @* <span>Available 4</span> | <span>About to expire 2</span> | <span>Rented 7</span> *@
-                            </div>
-                            <div class="action-buttons mb-2" id="btn-action">
-                                @* <a asp-controller="Room" asp-action="CreateRoom" class="btn btn-primary me-2 ">
-                                <i class="fas fa-plus"></i> Add Tenant
-                                </a>
-                                <a asp-controller="Room" asp-action="EditHome" class="btn btn-info me-2 ">
-                                <i class="fas fa-edit"></i> Export list
-                                </a> *@
+        <div class="col-12 mb-30">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="card ">
+                        <div class="card-header">
+                            <ul class="nav nav-tabs card-header-tabs" id="tab-list">
+                                @* Render rental property here *@
+                            </ul>
+                        </div>
+                        <div class="card-body">
+                            <div class="d-flex justify-content-between align-items-center flex-wrap mb-3">
+                                <div class="status-info mb-2" id="status-info">
+                                    @* Render status info *@
+                                </div>
+                                <div class="action-buttons mb-2" id="btn-action">
+                                    @* Render action buttons *@
+                                </div>
                             </div>
                             <div class="table-responsive">
                                 <table class="table table-striped table-bordered zero-configuration text-center"
@@ -81,13 +69,13 @@
                                             <th style="width: 15%;">Full Name</th>
                                             <th style="width: 10%;">Gender</th>
                                             <th style="width: 10%;">Date of Birth</th>
-                                            <th style="width: 10%;">ID Card Number</th>
+                                            <th style="width: 10%;">ID Card </th>
                                             <th style="width: 44%;">Address</th>
                                             <th style="width: 10%;">Actions</th>
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        @* Get data *@
+                                        @* Render user data *@
                                     </tbody>
                                 </table>
                             </div>
@@ -97,27 +85,49 @@
             </div>
         </div>
     </div>
-</div>
-<!-- Modal -->
-<div class="modal fade" id="basicModal">
-    <div class="modal-dialog" role="documen t">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Modal title</h5>
-                <button type="button" class="close" data-dismiss="modal">
-                    <span>&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                Modal body text goes here.
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+    <!-- Modal -->
+    <div class="modal fade" id="basicModal">
+        <div class="modal-dialog" role="documen t">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal">
+                        <span>&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Modal body text goes here.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
+}
+else
+{
+    <div class="col-12 mb-30">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="card text-center">
+                    <div class="card-body card-modifed">
+                        @* <div class="d-flex justify-content-end align-items-center flex-wrap">
+                    <div class="action-buttons mb-2">
+                    <a asp-controller="Room" asp-action="CreateHome" class="btn btn-primary me-2">
+                    <i class="fas fa-plus"></i>
+                    Add home
+                    </a>
+                    </div>
+                    </div> *@
+                    </div>
+                    @* Process no availble data *@
+                </div>
+            </div>
+        </div>
+    </div>
+}
 
 @* Link CSS*@
 @section AdditionalLinkCSS {
@@ -127,6 +137,11 @@
     <style>
         #user-list_wrapper {
             padding: 0px !important;
+        }
+
+        /* Show the first row if it exists */
+        div.table-responsive>div.dataTables_wrapper>div.row:first-child {
+            display: none !important;
         }
     </style>
 }
