--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -220,7 +220,9 @@
                                             <a href="page-lock.html"><i class="icon-lock"></i> <span>Lock
                                                     Screen</span></a>
                                         </li>
-                                        <li><a href="page-login.html"><i class="icon-key"></i> <span>Logout</span></a>
+                                        <li><a asp-action="Logout" asp-controller="Login" asp-area="Account"><i
+                                                    class="icon-key"></i>
+                                                <span>Logout</span></a>
                                         </li>
                                     </ul>
                                 </div>
