feat: Export file tenants

--- a/Areas/Blog/Views/News/CreateNews.cshtml
+++ b/Areas/Blog/Views/News/CreateNews.cshtml
@@ -162,6 +162,7 @@
         $(document).ready(function () {
             // Initialize Summernote
             $('.summernote').summernote({
+                height: 700,
                 callbacks: {
                     onChange: function (contents, $editable) {
                         // Update the hidden input with the Summernote content
