--- a/Areas/Tenant/Views/Tenant/CreateTenant.cshtml
+++ b/Areas/Tenant/Views/Tenant/CreateTenant.cshtml
@@ -5,6 +5,9 @@
         <div class="col-lg-12">
             <div class="card">
                 <div class="card-body">
+                    <h2 class="text-center lh-base mb-4">Add New Tenant</h2>
+                    <partial name="_SuccessMessage" />
+                    <partial name="_FailureMessage" />
                     <div class="form-validation">
                         <form asp-action="CreateTenant" method="post">
                             <!-- Identity Card -->
@@ -105,9 +108,20 @@
                             </div>
 
                             <!-- Submit Button -->
-                            <div class="form-group row">
-                                <div class="col-lg-8 ml-auto">
-                                    <button type="submit" class="btn btn-primary">Submit</button>
+                            <div class="form-group row ">
+                                <div class="col-4"></div>
+                                <div class="col-8 row">
+                                        <div class="col-12 col-md-4 mb-3">
+                                            <a asp-action="Index" class="btn btn-light btn-lg w-100">
+                                                Back to Home
+                                            </a>
+                                        </div>
+                                        <!-- Nút Update Rental Property -->
+                                        <div class="col-12 col-md-4 mb-3">
+                                            <button type="submit" class="btn btn-dark btn-lg w-100">
+                                                Create New Tenant
+                                            </button>
+                                        </div>
                                 </div>
                             </div>
                         </form>
@@ -169,4 +183,5 @@
             $('#female').prop('checked', false);
         }
     </script>
+    <partial name="_ValidationScriptsPartial" />
 }
