--- a/Areas/Tenant/Views/Tenant/EditTenant.cshtml
+++ b/Areas/Tenant/Views/Tenant/EditTenant.cshtml
@@ -1,78 +1,126 @@
-﻿<div class="container-fluid">
+﻿@model App.Models.AppUser
+<div class="container-fluid">
     <div class="row justify-content-center">
         <div class="col-lg-12">
             <div class="card">
                 <div class="card-body">
+                    <h2 class="text-center lh-base mb-4">Update Tenant Information</h2>
+                    <partial name="_SuccessMessage" />
+                    <partial name="_FailureMessage" />
                     <div class="form-validation">
-                        <form class="form-valide" action="#" method="post">
+                        <form asp-action="EditTenant" method="POST" asp-controller="Tenant" asp-area="Tenant" asp-route-id="@Model.Id">
+                            <!-- Identity Card -->
+                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                             <div class="form-group row">
-                                <label class="col-lg-4 col-form-label" for="val-fullname">
-                                    Họ và tên <span class="text-danger">*</span>
-                                </label>
+                                @Html.LabelFor(m => m.IdentityCard, new { @class = "col-lg-4 col-form-label" })
                                 <div class="col-lg-6">
-                                    <input type="text" class="form-control" id="val-fullname" name="val-fullname"
-                                        placeholder="Nhập họ và tên..">
+                                    @Html.EditorFor(m => m.IdentityCard, new
+                                        {
+                                            htmlAttributes = new
+                                            {
+                                                @class = "form-control",
+                                                placeholder = "Enter identity card number..",
+                                                onblur = "checkIdentityCard(this)",
+                                                @readonly = "readonly"
+                                            }
+                                        })
+                                    @Html.ValidationMessageFor(m => m.IdentityCard, "", new { @class = "text-danger" })
                                 </div>
                             </div>
+
+                            <!-- Full Name -->
                             <div class="form-group row">
-                                <label class="col-lg-4 col-form-label" for="val-email">
-                                    Email <span class="text-danger">*</span>
-                                </label>
+                                @Html.LabelFor(m => m.FullName, new { @class = "col-lg-4 col-form-label" })
                                 <div class="col-lg-6">
-                                    <input type="email" class="form-control" id="val-email" name="val-email"
-                                        placeholder="Nhập email hợp lệ..">
+                                    @Html.EditorFor(m => m.FullName, new
+                                        {
+                                            htmlAttributes = new { @class = "form-control", placeholder = "Enter full name.." }
+                                        })
+                                    @Html.ValidationMessageFor(m => m.FullName, "", new { @class = "text-danger" })
                                 </div>
                             </div>
+
+                            <!-- Email -->
                             <div class="form-group row">
-                                <label class="col-lg-4 col-form-label" for="val-phone">
-                                    Số điện thoại <span class="text-danger">*</span>
-                                </label>
+                                @Html.LabelFor(m => m.Email, new { @class = "col-lg-4 col-form-label" })
                                 <div class="col-lg-6">
-                                    <input type="text" class="form-control" id="val-phone" name="val-phone"
-                                        placeholder="Nhập số điện thoại..">
+                                    @Html.EditorFor(m => m.Email, new
+                                        {
+                                            htmlAttributes = new { @class = "form-control", placeholder = "Enter valid email.." }
+                                        })
+                                    @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                                 </div>
                             </div>
+
+                            <!-- Phone Number -->
                             <div class="form-group row">
-                                <label class="col-lg-4 col-form-label" for="val-birthdate">
-                                    Ngày tháng năm sinh <span class="text-danger">*</span>
-                                </label>
+                                @Html.LabelFor(m => m.PhoneNumber, new { @class = "col-lg-4 col-form-label" })
                                 <div class="col-lg-6">
-                                    <input type="date" class="form-control" id="val-birthdate" name="val-birthdate">
+                                    @Html.EditorFor(m => m.PhoneNumber, new
+                                        {
+                                            htmlAttributes = new { @class = "form-control", placeholder = "Enter phone number.." }
+                                        })
+                                    @Html.ValidationMessageFor(m => m.PhoneNumber, "", new { @class = "text-danger" })
                                 </div>
                             </div>
+
+                            <!-- Birthday -->
                             <div class="form-group row">
-                                <label class="col-lg-4 col-form-label" for="val-address">
-                                    Địa chỉ thường trú <span class="text-danger">*</span>
-                                </label>
+                                @Html.LabelFor(m => m.Birthday, new { @class = "col-lg-4 col-form-label" })
                                 <div class="col-lg-6">
-                                    <input type="text" class="form-control" id="val-address" name="val-address"
-                                        placeholder="Nhập địa chỉ..">
+                                    @Html.EditorFor(m => m.Birthday, new
+                                        {
+                                            htmlAttributes = new { @class = "form-control", type = "date" }
+                                        })
+                                    @Html.ValidationMessageFor(m => m.Birthday, "", new { @class = "text-danger" })
                                 </div>
                             </div>
+
+                            <!-- Address -->
                             <div class="form-group row">
-                                <label class="col-lg-4 col-form-label">Giới tính <span
-                                        class="text-danger">*</span></label>
+                                @Html.LabelFor(m => m.Address, new { @class = "col-lg-4 col-form-label" })
                                 <div class="col-lg-6">
-                                    <select class="form-control" id="val-gender" name="val-gender">
-                                        <option value="">Vui lòng chọn</option>
-                                        <option value="male">Nam</option>
-                                        <option value="female">Nữ</option>
-                                        <option value="other">Khác</option>
-                                    </select>
+                                    @Html.EditorFor(m => m.Address, new
+                                        {
+                                            htmlAttributes = new { @class = "form-control", placeholder = "Enter address.." }
+                                        })
+                                    @Html.ValidationMessageFor(m => m.Address, "", new { @class = "text-danger" })
                                 </div>
                             </div>
+
+                            <!-- Sex -->
                             <div class="form-group row">
-                                <label class="col-lg-4 col-form-label" for="val-cccd">
-                                    Số CCCD <span class="text-danger">*</span>
-                                </label>
-                                <div class="col-lg-6">
-                                    <input type="text" class="form-control" id="val-cccd" name="val-cccd"
-                                        placeholder="Nhập số CCCD..">
-                                </div>
+                                @Html.LabelFor(m => m.Sex, new { @class = "col-lg-4 col-form-label" })
+                                    <div class="form-check ml-3">
+                                        <input type="radio" id="male" name="Sex" value="false" 
+                                               class="form-check-input" 
+                                               @(Model.Sex == null || Model.Sex == false ? "checked" : "") />
+                                        <label class="form-check-label" for="male">Male</label>
+                                    </div>
+                                    <div class="form-check ml-3">
+                                        <input type="radio" id="female" name="Sex" value="true" 
+                                               class="form-check-input" 
+                                               @(Model.Sex == true ? "checked" : "") />
+                                        <label class="form-check-label" for="female">Female</label>
+                                    </div>
+                                    @Html.ValidationMessageFor(m => m.Sex, "", new { @class = "text-danger" })
                             </div>
-                            <div class="form-group row">
-                                <div class="col-lg-8 ml-auto">
-                                    <button type="submit" class="btn btn-primary">Gửi</button>
+
+                            <!-- Submit Button -->
+                            <div class="form-group row ">
+                                <div class="col-4"></div>
+                                <div class="col-8 row">
+                                    <div class="col-12 col-md-4 mb-3">
+                                        <a asp-action="Index" class="btn btn-light btn-lg w-100">
+                                            Back to Home
+                                        </a>
+                                    </div>
+                                    <!-- Nút Update Rental Property -->
+                                    <div class="col-12 col-md-4 mb-3">
+                                        <button type="submit" class="btn btn-dark btn-lg w-100">
+                                            Update Tenant
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                         </form>
@@ -82,3 +130,57 @@
         </div>
     </div>
 </div>
+
+@section AdditionalLinkJavascript {
+   <script>
+        var previousIdentityCard = ''; 
+        function checkIdentityCard(input) {
+        var identityCard = $(input).val().trim();
+        
+            if (identityCard !== previousIdentityCard) {
+                previousIdentityCard = identityCard; 
+                clearFormFields();
+                if (identityCard !== '') {
+                    $.ajax({
+                        url: '/check-identity-card',
+                        method: 'POST',
+                        data: { identityCard: identityCard },
+                        dataType: 'json',
+                        success: function (data) {
+                            if (data.exists) {
+                                // Autofill other form fields
+                                $('#FullName').val(data.fullName);
+                                $('#Email').val(data.email);
+                                $('#PhoneNumber').val(data.phoneNumber);
+                                $('#Birthday').val(data.birthday);
+                                $('#Address').val(data.address);
+    
+                                // Set radio buttons based on sex
+                                $('#male').prop('checked', data.sex); 
+                                $('#female').prop('checked', !data.sex); 
+                            } else {
+                            
+                                clearFormFields();
+                            }
+                        },
+                        error: function (xhr, status, error) {
+                            console.error('Error checking identity card:', status, error);
+                        }
+                    });
+                }
+            }
+        }
+    
+        function clearFormFields() {
+            // Xóa tất cả các trường thông tin
+            $('#FullName').val('');
+            $('#Email').val('');
+            $('#PhoneNumber').val('');
+            $('#Birthday').val('');
+            $('#Address').val('');
+            $('#male').prop('checked', false);
+            $('#female').prop('checked', false);
+        }
+    </script>
+    <partial name="_ValidationScriptsPartial" />
+}
